[package]
name = "cloxers"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
miette = { version = "7.4.0", features = ["fancy"] }
num_enum = "0.7.3"
thiserror = "2.0.9"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench_vm"
harness = false
